--- a/DevMag/ResourcePackages/Custom/MVC/Views/Layouts/default.cshtml
+++ b/DevMag/ResourcePackages/Custom/MVC/Views/Layouts/default.cshtml
@@ -12,8 +12,8 @@
     <title></title>
 
     @Html.Section("head")
-    @Html.StyleSheet(Url.Content("~/ResourcePackages/Custom/assets/dist/css/dev-magazine.css"), "head")
     @Html.StyleSheet(Url.Content("~/ResourcePackages/Custom/assets/dist/css/styles.min.css"), "head")
+    @Html.StyleSheet(Url.Content("~/ResourcePackages/Custom/assets/dist/css/dev-magazine.css"), "head")
 </head>
 
 <body>
@@ -22,24 +22,26 @@
     <nav class="navbar navbar-default js-nav-fixed" role="navigation">
         @Html.SfPlaceHolder("Navigation")
     </nav>
-        
-    <div class="sfPublicWrapper" id="PublicWrapper">		
-        @Html.SfPlaceHolder("Contentplaceholder1")		
+
+    <div class="Main-content">
+        <div class="sfPublicWrapper" id="PublicWrapper">
+            @Html.SfPlaceHolder("Contentplaceholder1")
+        </div>
     </div>
 
-    @* Inline editing scripts and helpers. They should be available only when inline editing is possible. *@
-    @if (Html.ShouldRenderInlineEditing())
-    {
-        @Html.Script(ScriptRef.MicrosoftAjax, "top")
-        @Html.Script(ScriptRef.MicrosoftAjaxCore, "top")
-        @Html.Script(ScriptRef.JQuery, "top")
+        @* Inline editing scripts and helpers. They should be available only when inline editing is possible. *@
+        @if (Html.ShouldRenderInlineEditing())
+        {
+            @Html.Script(ScriptRef.MicrosoftAjax, "top")
+            @Html.Script(ScriptRef.MicrosoftAjaxCore, "top")
+            @Html.Script(ScriptRef.JQuery, "top")
 
-        @Html.Script(Url.EmbeddedResource("Telerik.Sitefinity.Resources.Reference", "Telerik.Sitefinity.Resources.Scripts.jquery.ba-outside-events.min.js"), "top")
-        @Html.Script(ScriptRef.KendoAll, "top")
-        @Html.Script(Url.EmbeddedResource("Telerik.Sitefinity.Resources.Reference", "Telerik.Sitefinity.Resources.Scripts.RequireJS.require.min.js"), "top")
-        @Html.InlineEditingManager(false)
-    }
+            @Html.Script(Url.EmbeddedResource("Telerik.Sitefinity.Resources.Reference", "Telerik.Sitefinity.Resources.Scripts.jquery.ba-outside-events.min.js"), "top")
+            @Html.Script(ScriptRef.KendoAll, "top")
+            @Html.Script(Url.EmbeddedResource("Telerik.Sitefinity.Resources.Reference", "Telerik.Sitefinity.Resources.Scripts.RequireJS.require.min.js"), "top")
+            @Html.InlineEditingManager(false)
+        }
 
-    @Html.Section("bottom")
+        @Html.Section("bottom")
 </body>
 </html>
