--- a/DevMag/ResourcePackages/Custom/MVC/Views/News/List.Featured.cshtml
+++ b/DevMag/ResourcePackages/Custom/MVC/Views/News/List.Featured.cshtml
@@ -8,6 +8,8 @@
 @foreach (var item in Model.Items)
 {
     var navigateUrl = HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage);
+    var authorViewModel = SitefinityWebApp.Mvc.Models.AuthorViewModel.GetAuthorViewModel(
+    item.RelatedItem("RelatedAuthor").GetDataItem<Telerik.Sitefinity.DynamicModules.Model.DynamicContent>());
     <!--  Default 8+4 Feather widget -->
     <div class="row">
         <div class="col-md-7">
@@ -17,11 +19,11 @@
             <h4>Featured</h4>
             <h1><a href="@navigateUrl">@item.Fields.Title</a></h1>
             <div class="media Author--small">
-                @*<a class="pull-left" href="#">
-                        <img class="media-object img-circle" src="ResourcePackages/Bootstrap/images/authors/joe.jpg" alt="joe-small" height="40" width="40">
-                    </a>*@
+                <a class="pull-left" href="#">
+                        <img class="media-object img-circle" src="@authorViewModel.Avatar" alt="joe-small" height="40" width="40">
+                    </a>
                 <div class="media-body">
-                    <h6 class="media-heading"><a href="#">@DataResolver.Resolve(item.DataItem, "Author", null)</a></h6>
+                    <h6 class="media-heading"><a href="#">@authorViewModel.Name</a></h6>
                     <span class="date-created">on @item.GetDateTime("PublicationDate", "MMM d, yyyy")</span>
                 </div>
             </div>
